k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-api
  labels:
    app: devops-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devops-api
  template:
    metadata:
      labels:
        app: devops-api
    spec:
      containers:
      - name: devops-api
        image: 754056705747.dkr.ecr.eu-west-2.amazonaws.com/url-app:68924f27c9377e72c94261a2fa96a6710cc1bdc7
        ports:
        - containerPort: 8080
